--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .header {
   width: 100%;
   height: 100px;
@@ -25,6 +27,7 @@
   margin-left: auto;
   gap: 30px;
   padding-right: 20px;
+  align-items: center;
 
   a {
     text-decoration: none;
@@ -36,6 +39,24 @@
     &.active {
       color: var(--primary-color);
     }
+  }
+
+  .logout-link {
+    color: #f44336;
+    
+    &:hover {
+      color: color.adjust(#f44336, $lightness: -10%);
+    }
+  }
+
+  .user-email {
+    font-size: 14px;
+    color: var(--text-color);
+    opacity: 0.8;
+    padding: 5px 10px;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    margin-left: 10px;
   }
 }
 
